--- a/package.json
+++ b/package.json
@@ -1,22 +1,27 @@
 {
-	"name": "reactnativets",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"start": "node node_modules/react-native/local-cli/cli.js start",
-		"test": "jest"
-	},
-	"dependencies": {
-		"react": "15.4.2",
-		"react-native": "0.40.0"
-	},
-	"devDependencies": {
-		"babel-jest": "18.0.0",
-		"babel-preset-react-native": "1.9.1",
-		"jest": "18.1.0",
-		"react-test-renderer": "15.4.2"
-	},
-	"jest": {
-		"preset": "react-native"
-	}
+  "name": "reactnativets",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "dev": "webpack-dev-server --port 3000 --config web/webpack.config.dev.js --inline --hot --colors --quiet",
+    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "test": "jest"
+  },
+  "dependencies": {
+    "react": "^15.4.2",
+    "react-native": "0.40.0",
+    "react-native-web": "0.0.69"
+  },
+  "devDependencies": {
+    "babel-jest": "18.0.0",
+    "babel-loader": "^6.2.10",
+    "babel-preset-react-native": "1.9.1",
+    "jest": "18.1.0",
+    "react-test-renderer": "15.4.2",
+    "webpack": "^1.14.0",
+    "webpack-dev-server": "^1.16.2"
+  },
+  "jest": {
+    "preset": "react-native"
+  }
 }
