--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "react": "^15.4.2",
     "react-native": "0.40.0",
-    "react-native-web": "0.0.69"
+    "react-native-web": "0.0.69",
+    "tslint": "^4.4.2"
   },
   "devDependencies": {
     "babel-jest": "18.0.0",
